--- a/ДорожноеПриложение/MainPage.xaml
+++ b/ДорожноеПриложение/MainPage.xaml
@@ -66,7 +66,7 @@
                                 <DataTemplate>
                                     <Button 
                                         x:Name="BtnPer"
-                                        Content="отчет"
+                                        Content="Отчет"
                                         Width="auto"
                                         Click="BtnPer_Click"/>
                                 </DataTemplate>
