--- a/ДорожноеПриложение/MainPage.xaml
+++ b/ДорожноеПриложение/MainPage.xaml
@@ -84,27 +84,27 @@
                                 </DataTemplate>
                             </DataGridTemplateColumn.CellTemplate>
                         </DataGridTemplateColumn>
-                        
-                        <DataGridTemplateColumn>
+
+                        <DataGridTemplateColumn x:Name="UpdTask">
                             <DataGridTemplateColumn.CellTemplate>
                                 <DataTemplate>
                                     <Button 
-                                        x:Name="UpdTask"
+                                        x:Name="UpdTaskBtn"
                                         Content="Редактировать"
                                         Width="auto"
-                                        Click="UpdTask_Click"/>
+                                        Click="UpdTaskBtn_Click"/>
                                 </DataTemplate>
                             </DataGridTemplateColumn.CellTemplate>
                         </DataGridTemplateColumn>
 
-                        <DataGridTemplateColumn>
+                        <DataGridTemplateColumn x:Name="DelTask">
                             <DataGridTemplateColumn.CellTemplate>
                                 <DataTemplate>
                                     <Button 
-                                        x:Name="DelTask"
+                                        x:Name="DelTaskBtn"
                                         Content="Удалить"
                                         Width="auto"
-                                        Click="DelTask_Click"/>
+                                        Click="DelTaskBtn_Click"/>
                                 </DataTemplate>
                             </DataGridTemplateColumn.CellTemplate>
                         </DataGridTemplateColumn>
@@ -211,24 +211,78 @@
                                     </Image.Source>
                                 </Image>
 
-                                <Grid Grid.Row="5" Grid.ColumnSpan="3">
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="*"/>
-                                        <ColumnDefinition Width="*"/>
-                                    </Grid.ColumnDefinitions>
+                                <StackPanel x:Name="SPE" Orientation="Horizontal" Grid.Row="5" Grid.ColumnSpan="3">
                                     <Button
                                         x:Name="UpdEmp"
                                         Click="UpdEmp_Click"
                                         Content="Редоктировать"
-                                        Grid.Column="0"
                                         Margin="2"/>
                                     <Button
                                         x:Name="DelEmp"
                                         Click="DelEmp_Click"
                                         Content="Уволить" 
-                                        Grid.Column="1"
                                         Margin="2"/>
-                                </Grid>
+                                </StackPanel>
+                                <TextBlock
+                                    Text="Имя" Grid.Column="1" Grid.Row="0"/>
+                                <TextBlock
+                                    Text="Фамилия" Grid.Column="1" Grid.Row="1"/>
+                                <TextBlock
+                                    Text="Отчество" Grid.Column="1" Grid.Row="2"/>
+                                <TextBlock
+                                    Text="Специальность" Grid.Column="1" Grid.Row="3"/>
+                                <TextBlock
+                                    Text="Бригада" Grid.Column="1"  Grid.Row="4"/>
+
+                                <TextBlock
+                                    Text="{Binding Имя}" Grid.Column="2" Grid.Row="0"/>
+                                <TextBlock
+                                    Text="{Binding Фамилия}" Grid.Column="2" Grid.Row="1"/>
+                                <TextBlock
+                                    Text="{Binding Отчество}" Grid.Column="2" Grid.Row="2"/>
+                                <TextBlock
+                                    Text="{Binding Специальность}" Grid.Column="2" Grid.Row="3"/>
+                                <TextBlock
+                                    Text="{Binding Бригады.Название}" Grid.Column="2"  Grid.Row="4"/>
+                            </Grid>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+                <ListView 
+                    x:Name="LVC0"
+                    ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                    HorizontalContentAlignment="Center" 
+                    Grid.Row="1">
+                    <ListView.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <WrapPanel 
+                                Orientation="Horizontal"
+                                HorizontalAlignment="Center"/>
+                        </ItemsPanelTemplate>
+                    </ListView.ItemsPanel>
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="50"/>
+                                    <RowDefinition Height="50"/>
+                                    <RowDefinition Height="50"/>
+                                    <RowDefinition Height="50"/>
+                                    <RowDefinition Height="50"/>
+                                    <RowDefinition Height="50"/>
+                                </Grid.RowDefinitions>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="200"/>
+                                    <ColumnDefinition Width="100"/>
+                                    <ColumnDefinition Width="100"/>
+                                </Grid.ColumnDefinitions>
+
+                                <Image Grid.RowSpan="4">
+                                    <Image.Source>
+                                        <Binding Path="Фото"/>
+                                    </Image.Source>
+                                </Image>
+
                                 <TextBlock
                                     Text="Имя" Grid.Column="1" Grid.Row="0"/>
                                 <TextBlock
@@ -306,7 +360,7 @@
                                 Header="Кол-во" Binding="{Binding Количиство}"/>
                         <DataGridTextColumn
                                 Header="ЕИ" Binding="{Binding ЕденицаИзмерения}"/>
-                        <DataGridTemplateColumn>
+                        <DataGridTemplateColumn x:Name="Plis">
                             <DataGridTemplateColumn.CellTemplate>
                                 <DataTemplate>
                                     <Button x:Name="PlisBtn"
@@ -316,7 +370,7 @@
                                 </DataTemplate>
                             </DataGridTemplateColumn.CellTemplate>
                         </DataGridTemplateColumn>
-                        <DataGridTemplateColumn>
+                        <DataGridTemplateColumn x:Name="Min">
                             <DataGridTemplateColumn.CellTemplate>
                                 <DataTemplate>
                                     <Button x:Name="MinBtn"
@@ -326,7 +380,7 @@
                                 </DataTemplate>
                             </DataGridTemplateColumn.CellTemplate>
                         </DataGridTemplateColumn>
-                        <DataGridTemplateColumn>
+                        <DataGridTemplateColumn x:Name="DelMat">
                             <DataGridTemplateColumn.CellTemplate>
                                 <DataTemplate>
                                     <Button x:Name="DelMatBtn"
